src/objects/UHC_Registration_Flag__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>UHC Registration Flags</relationshipLabel>
        <relationshipName>UHC_Registration_Flags</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flag_Action__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Color__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag_Portal_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Flag Portal Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UHC Registration Flag</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>UHC Registration Flag Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UHC Registration Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>